--- a/Kotlin/manifestTransformerTest/app/src/main/AndroidManifest.xml
+++ b/Kotlin/manifestTransformerTest/app/src/main/AndroidManifest.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
                 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:versionCode="1"
+                    android:versionName="0.0.1"
                     package="com.android.build.example.minimal">
                     <application android:label="Minimal">
-                        <activity android:name="MainActivity">
+                        <activity android:name="com.ccf.test.MainActivity"
+                            android:exported="true">
                             <intent-filter>
                                 <action android:name="android.intent.action.MAIN" />
                                 <category android:name="android.intent.category.LAUNCHER" />
